fix member grid alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -327,41 +327,111 @@ body {
 
 
 /* Team Members section */
-.members-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-}
+
 
 /* carousel */
-/* .carousel-containter {
+/* .carousel-container {
+    width: 80%;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .carousel {
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: repeat(10, 70vw);
-    grid-template-rows: 1fr;
-    grid-gap: 1rem;
-    overflow: scroll;
-    height: 70vh;
-    scroll-snap-type: both mandatory;
-    scroll-padding: 1rem;
-    max-width: 1200px;
+    aspect-ratio: 15/7;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
 }
 
-.active {
-    scroll-snap-type: unset;
+.carousel .item {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    transition: opacity 0.5s ease-in-out;
 }
 
-.carousel li {
-    scroll-snap-align: center;
-    display: inline-block;
-    border-radius: 3px;
-    font-size: 0;
+.carousel .item.active {
+    opacity: 1;
+    display: block;
+}
+
+.carousel img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.carousel-caption {
+    width: 100%;
+
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    font-size: 12px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel-btn {
+    padding: 1em 2em;
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 900;
+    color: aliceblue;
+    background-color: rgba(30, 30, 30, 0.7);
+    transition: transform 0.2s ease-in-out;
+}
+
+.carousel-btn:active,
+.carousel-btn:focus {
+    transform: translateY(-50%) scale(0.9);
+}
+
+.carousel-btn:hover {
+    transform: translateY(-50%) scale(0.96);
+}
+
+.carousel-btn.prev {
+    left: 5%;
+}
+
+.carousel-btn.next {
+    right: 5%;
+}
+
+.carousel-dots {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.carousel-dots.dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    background-color: #373737;
+    transition: background-color 0.2s ease;
+}
+
+.carousel-dots.dot.active,
+.carousel-dots.dot:hover {
+    background-color: aliceblue;
 } */
+
+
 
 .carousel-container {
     width: 900px;
@@ -418,32 +488,36 @@ body {
     transform: rotate(135deg);
 }
 
-.cards-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 50px;
-    padding: 50px;
+
+/* FIX */
+.members-container {
+    position: relative;
+    display: flex;
     justify-content: center;
-    width: 100%;
 }
 
-
+.cards-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2em;
+    max-width: 1200px;
+    gap: 20px;
+}
 
 
 .card {
     position: relative;
+    width: 250px;
+    height: 350px;
     border-radius: 10px;
     overflow: hidden;
     background-size: cover;
     background-position: center;
     transition: transform 0.3s ease;
-    height: 300px;
-    width: 100%;
+    display: flex;
+    align-items: flex-end;
 }
-
-/* .card:hover {
-    transform: translateY(-10px);
-} */
 
 .card-info {
     position: absolute;
